# Deployment_XGBoost_Inference_Heart_Disease_UCI

./: README.md  pyproject.toml
models/: trained_model_2025-01-06.joblib  trained_model_2025-01-08.joblib
src/: data_preprocessor.py  inference.py
tests/: test_data_preprocessor.py  test_inference.py  test_model_loader.py
